test/corpus/parenthesize.txt
==================
Parenthesized expression
==================

(0d42)

---

(source_file
    (parenthesize
        (decimal)))

==================
Nested parentheses
==================

((0d1))

---

(source_file
    (parenthesize
        (parenthesize
            (decimal))))
