test/corpus/source.txt
==================
Empty source block
==================

{}

---

(source_file
    (source))

==================
Source with statements
==================

{
    0d1;
    0d2
}

---

(source_file
    (source
        (decimal)
        (decimal)))
